--- a/elika-warehouse/views/tmpl/firmware/firmware-management.html
+++ b/elika-warehouse/views/tmpl/firmware/firmware-management.html
@@ -203,7 +203,7 @@
 							<div ng-class="class">
 								<div class="glview">
 									<md-content>			
-										<md-card ng-repeat="firmware in firmwares | limitTo:totalDisplayed | filter:text | filter:component | filter:devicemodel | filter:hardware | filter:firmware | orderBy:myOrderBy">
+										<md-card ng-repeat="firmware in firmwares | limitTo:totalDisplayed | filter:text | filter:component | filter:devicemodel | filter:hardware | filter:firmware | orderBy:myOrderBy track by firmware.firmware_id">
 											<md-card-content>
 												<h2 class="md-title">{{ firmware.firmware_component }}</h2>
 												<p><span>Device</span> : {{ firmware.firmware_model }}</p>
