--- a/elika-warehouse/views/tmpl/firmware/view-firmware.html
+++ b/elika-warehouse/views/tmpl/firmware/view-firmware.html
@@ -118,11 +118,11 @@
 											<p><label>Device Model</label> {{firmwareData.firmware_model }}</p>
 											<p><label>Hardware Version</label> {{firmwareData.firmware_hardware_version }}</p>
 											<p><label>Firmware Version</label> {{firmwareData.firmware_version }}</p>
-											<p><label>File Structure Version</label> XXXX</p>
-											<p><label>Upgrade Device</label> XXXXXXX<span class="pull-right w-60">
+											<!-- <p><label>File Structure Version</label> XXXX</p> -->
+											<!-- <p><label>Upgrade Device</label> XXXXXXX<span class="pull-right w-60"> -->
 											<!-- <a ng-click="open()" href="javascript:void(0);" class="text-danger text-sm" ><strong>Edit</strong></a> -->
-											<a class="text-danger text-sm" ><strong>Edit</strong></a>
-											</span></p>
+											<!-- <a class="text-danger text-sm" ><strong>Edit</strong></a>
+											</span></p> -->
 											<p><label>Description</label><br/>{{firmwareData.firmware_description }}</p>
 										</div>
 									</div>
