--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -37,7 +37,7 @@
 												<div class="row">
 													<div class="form-group col-sm-12 col-md-12">
 														<label for="">Device Name <span class="text-danger">*</span></label>
-														<input type="text" maxlength="30" name="device_name" ng-model="device.device_name" id="" class="form-control" placeholder="" required autocomplete="off">
+														<input type="text" maxlength="30" name="device_name" ng-model="device.device_name" id="" class="form-control" placeholder="" required autocomplete="off" ui-number-mask>
 													</div>
 													
 												</div>
