--- a/elika-warehouse/views/tmpl/inventory/edit-device.html
+++ b/elika-warehouse/views/tmpl/inventory/edit-device.html
@@ -106,7 +106,7 @@
 									</div>
 									<div class="form-group col-sm-6 col-md-6">
 										<label for="">Account Number/ICCID <span class="text-danger">*</span></label>
-										<input type="text" name="account_no" id="" class="form-control" ng-model="device.device_account_no" number maxlength="16" placeholder="" required>
+										<input type="text" name="account_no" id="" class="form-control" ng-model="device.device_account_no" number ui-mask="{{'9999 9999 9999 9999 9999'}}" placeholder="" required>
 									</div>
 								</div>
 								<div class="row">
@@ -123,7 +123,7 @@
 									
 									<div class="form-group col-sm-6 col-md-6">
 										<label for="">Phone Number <span class="text-danger">*</span></label>
-										<input type="text" name="phone_no" id="" class="form-control" ng-model="device.device_phone_no" pattern="^\+[1-9]{1}[0-9]{3,14}$" oninvalid="setCustomValidity('Please enter valid mobile number')" onchange="try{setCustomValidity('')}catch(e){}" placeholder="" required>
+										<input type="text" name="phone_no" id="" class="form-control" ng-model="device.device_phone_no" ui-mask="{{'(999) 999-9999'}}" placeholder="" required>
 									</div>
 									<div class="form-group col-sm-6 col-md-6">
 										<label for="">Bluetooth Mac Id <span class="text-danger">*</span></label>
