--- a/views/tmpl/admin/activity.html
+++ b/views/tmpl/admin/activity.html
@@ -33,7 +33,7 @@
 							<div class="profile-settings"> 
 								<div class="row">
 									<div class="col-sm-12 col-md-12 col-centered">
-										<div class="col-sm-4 col-md-5">
+										<div class="col-sm-6 col-md-6">
 											<label for="">Auto Refresh</label><br/>
 											<select class="form-control w-240" disabled>
 												<option selected>None</option>
@@ -43,6 +43,9 @@
 												<option>15 min</option>
 												<option>30 min</option>
 											</select>
+										</div>
+										<div class="col-sm-6 col-md-6">
+											<button ng-click="eventFetch()">Auto Refresh</button>
 										</div>
 									</div>
 								</div>
@@ -106,10 +109,11 @@
 									</thead>
 									<tbody>
 										<tr ng-repeat="active in activities">
+											
 											<td>{{active.time*1000 | date:'d MMM yyyy, h:mm a'}}</td>
 											<td>{{active['user/event']}}</td>
-											<td>{{active['access_mode']}}</td>
-											
+											<!-- <td>{{active['access_mode']}}</td> -->
+											<td>{{active.media_file}}</td>
 											<td>{{active['facility']}}</td>
 											<td>{{active['door/device']}}</td>
 											
@@ -134,17 +138,22 @@
 								<h3 class="mt-0">Screenshot</h3>					
 								<div class="tile-body p-0">
 									<img src="{{trustSrc(mediafile)}}" class="userimg" alt="">
-									<!-- <img ng-src="https://elika-v2-devices.s3.amazonaws.com/elika4004/camera/57/snapshots/event_access_grant_2147483647_1495234931.jpeg?AWSAccessKeyId=AKIAJZ4PUZXXG2DABBSQ&Expires=1496147170&Signature=BbGsd%2F5Nqo3tMmzy6dyA8AaxOCM%3D" class="userimg" alt=""> -->
+									
 								</div>
 							</div>
 							<div ng-if="mediatype=='mp4'" class="form-group col-sm-12">
 								<h3 class="mt-40">Video</h3>					
 								<div class="tile-body p-0">
-									<video controls>
-										<source src="{{trustSrc(mediafile)}}" type="video/mp4">
+									<!-- <video controls>
+										<source ng-src="{{trustSrc(mediafile)}}" type="video/mp4">
 
 										Your browser does not support HTML5 video.
-									</video>
+									</video> -->
+									<videogular >
+										<vg-media vg-src="mediafile"
+										          vg-native-controls="true">
+										</vg-media>
+									</videogular>
 								</div>
 							</div>
 						</div>
