--- a/views/tmpl/admin/user/edit-user.html
+++ b/views/tmpl/admin/user/edit-user.html
@@ -188,8 +188,7 @@
 														</div>
 														<div class="form-group col-sm-6 col-md-6">
 															<label for="">Phone <span class="text-danger">*</span></label>
-															<input type="text" maxlength="15" class="form-control" pattern="^\+[1-9]{1}[0-9]{3,14}$" oninvalid="setCustomValidity('Please enter valid mobile number')"
-															 onchange="try{setCustomValidity('')}catch(e){}" id="user_phone_no" ng-model="editUser.user_phone_no">
+															<input type="text" maxlength="15" class="form-control" ui-mask="{{'(999) 999-9999'}}" id="user_phone_no" ng-model="editUser.user_phone_no">
 														</div>
 														<div class="form-group col-sm-6 col-md-6">
 															<label for="">Address <span class="text-danger">*</span></label>
