--- a/views/tmpl/admin/user/add-user.html
+++ b/views/tmpl/admin/user/add-user.html
@@ -110,7 +110,7 @@
 														</div>
 														<div class="form-group col-sm-6 col-md-3">
 															<label for="">Email <span class="text-danger">*</span></label>
-															<input type="email" name="email" id="email" ng-model="userData.email" class="form-control" placeholder="" required>
+															<input type="email" name="email" id="email" ng-model="userData.email" class="form-control" placeholder="" ng-pattern="'[^@]+@[^@]+.[a-zA-Z]{2,6}'" required>
 														</div>
 														<div class="form-group col-sm-6 col-md-3">
 															<label for="">Profile Photo </label>
