--- a/elika-warehouse/views/tmpl/administrator/admin.html
+++ b/elika-warehouse/views/tmpl/administrator/admin.html
@@ -143,7 +143,7 @@
 													<div ng-controller="DatepickerDemoCtrl">
 														<label for="">Expiration Date</label>
 														<div class="input-group userexp">
-															<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="dt" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+															<input type="text" class="form-control" uib-datepicker-popup="{{format}}" datepicker-localdate ng-model="dt" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
 															<span class="input-group-btn">
 																<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
 															</span>
