--- a/views/tmpl/admin/door/doors.html
+++ b/views/tmpl/admin/door/doors.html
@@ -1,10 +1,10 @@
 <div class="page page-users">
-	<div class="pageheader backpage">		
+	<div class="pageheader backpage">
 		<a href back-button><i class="fa fa-arrow-left"></i> Back</a>
 	</div>
-	
+
 	<div class="pagecontent">
-		<div class="row">		
+		<div class="row">
 			<div class="dnone card-container col-sm-3 col-md-3">
 				<div class="card">
 					<div class="bg-dashboard">
@@ -12,16 +12,16 @@
 							<div class="row">
 								<div class="col-md-12">
 									<h3 class="custom-font">{{page.title}}</h3>
-									<!-- <p>{{page.subtitle}}</p> -->									
+									<!-- <p>{{page.subtitle}}</p> -->
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>			
-			<flip-header></flip-header>			
+			</div>
+			<flip-header></flip-header>
 		</div>
-		
+
 		<div class="row">
 			<div class="col-md-12">
 				<section class="tile box-shadow" fullscreen="isFullscreen06">
@@ -32,8 +32,10 @@
 								<div ng-controller="ModalDemoCtrl">
 									<script type="text/ng-template" id="myModalContent.html">
 										<form ng-validate="validationOptions" name="create_door" ng-submit="createDoor(door, create_door)" role="form">
-											<div class="modal-header"><h4 class="modal-title custom-font">Create Door</h4></div>
-											<div class="modal-body">	
+											<div class="modal-header">
+												<h4 class="modal-title custom-font">Create Door</h4>
+											</div>
+											<div class="modal-body">
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6 first">
 														<label for="">Name <span class="text-danger">*</span></label>
@@ -41,7 +43,8 @@
 													</div>
 													<div class="form-group col-sm-6 col-md-6 last">
 														<label for="">Facility <span class="text-danger">*</span></label><br/>
-														<select class="form-control" ng-model="door.facility_id" ng-init="door.facility_id = facilityId" ng-options="item.facility_id as item.facility_name for item in facilityList" required>
+														<select class="form-control" ng-model="door.facility_id" ng-init="door.facility_id = facilityId" ng-options="item.facility_id as item.facility_name for item in facilityList"
+														 required>
 															<option value="">Select</option>
 														</select>
 													</div>
@@ -58,16 +61,16 @@
 											</div>
 											<div class="modal-footer">
 												<div class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c door_close" id="close" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</div>
-												<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
+												<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>
 											</div>
-										</form>		
+										</form>
 									</script>
 									<a ng-click="open()" class="btn btn-default btn-border btn-rounded btn-ef btn-ef-5 btn-ef-5b add"><i class="fa fa-plus"></i> <span>Add Doors</span></a>
 								</div>
 							</li>
 						</ul>
 					</div>
-					
+
 					<div class="hometabs">
 						<div class="tile-body table-custom">
 							<div class="row pos-r mb-40">
@@ -87,26 +90,33 @@
 								<div class="col-sm-6 col-md-6">
 									<div class="row">
 										<div class="col-sm-8 col-md-9 search">
-											<input type="text" class="form-control" placeholder="Search by text...." ng-model="searchText" placeholder="Search by text...." ng-keyup="searchFunction($event)">
+											<input type="text" class="form-control" placeholder="Search by text...." ng-model="searchText" placeholder="Search by text...."
+											 ng-keyup="searchFunction($event)">
 											<button class="btn btn-default br-2-r" type="button" ng-click="searchFunction()">Search</button>
 										</div>
 										<div class="col-sm-4 col-md-3 profilephoto csvupload">
 											<div ng-controller="ModalDemo1Ctrl">
 												<script type="text/ng-template" id="myModalContent1.html">
 													<form name="form1" role="form">
-														<div class="modal-header"><h4 class="modal-title custom-font">Upload CSV File</h4></div>
+														<div class="modal-header">
+															<h4 class="modal-title custom-font">Upload CSV File</h4>
+														</div>
 														<div class="modal-body mt-5 pb-30 mb-40">
 															<label for="">Upload CSV file</label>
 															<div class="profilephoto">
-																<input type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
-																<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
-															</div>											
+																<input type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2"
+																 tabindex="-1">
+																<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn"
+																	 tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span>																	Find file</label>
+																	</span>
+																</div>
+															</div>
 														</div>
 														<div class="modal-footer">
 															<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Cancel</button>
-															<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Save</button>	
+															<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Save</button>
 														</div>
-													</form>		
+													</form>
 												</script>
 												<span ng-click="open()" class="group-span-filestyle input-group-btn"><label class="btn btn-default "><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp; Upload CSV</label></span>
 											</div>
@@ -139,21 +149,21 @@
 									</div>
 								</div>-->
 							</div>
-							<div ng-if="result">									
-								<div layout="row" ng-class="statusclass">									
+							<div ng-if="result">
+								<div layout="row" ng-class="statusclass">
 									{{result}}
 								</div>
 							</div>
-							<div ng-if="adoors.length == 0">
+							<div ng-if="adoors.length <=0">
 								<div layout="row" class="error" ng-class="statusclass">
 									<!--{{status}}-->
 									No Record Found
 								</div>
 							</div>
-							<div ng-class="class" ng-cloak>
+							<div ng-class="class" ng-cloak ng-if="adoors.length >0 ">
 								<div class="glview">
 									<md-content>
-										<md-card ng-repeat="door in adoors | limitTo:totalDisplayed | filter:text | filter:title | filter:status | orderBy:myOrderBy track by $index">
+										<md-card ng-repeat="door in adoors track by door.door_id">
 											<md-card-content>
 												<h2 class="md-title mt-40">{{ door.door_name }}</h2>
 												<p class="mb-20">{{ door.status == '1' ? 'Active' : 'Inactive' }}</p>
@@ -165,9 +175,10 @@
 												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.door.edit-door({door_id:door.door_id, type:'edit'})">Edit</a>
 												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event, door.door_id)">Delete</a>
 											</div>
-										</md-card>										
+										</md-card>
 									</md-content>
-									<button ng-hide="hideLoadMore" ng-if="adoors && adoors.length>0" class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="listDoors()" ng-style="lmbtn">Load more</button>
+									<button ng-hide="hideLoadMore" ng-if="adoors && adoors.length>0" class="btn btn-success btn-border btn-rounded m-0-auto f-wm"
+									 ng-click="listDoors()" ng-style="lmbtn">Load more</button>
 								</div>
 							</div>
 						</div>
@@ -175,6 +186,6 @@
 				</section>
 			</div>
 		</div>
-		
+
 	</div>
 </div>
