--- a/views/tmpl/admin/camera/camera-dvr.html
+++ b/views/tmpl/admin/camera/camera-dvr.html
@@ -198,7 +198,7 @@
 													<div class="col-sm-3 col-md-3 " ng-controller="DatepickerDemoCtrl ">
 														<label for=" ">Date <span class="text-danger">*</span></label>
 														<div class="input-group ">
-															<input type="text " class="form-control " uib-datepicker-popup="{{format}} " datepicker-localdate ng-model="recordedFeedsSearchObj.dt "
+															<input type="text " class="form-control " uib-datepicker-popup="{{format}} "  ng-model="recordedFeedsSearchObj.dt "
 															 is-open="opened
 												 " datepicker-options="dateOptions " ng-required="true " close-text="Close " />
 															<span class="input-group-btn ">
