--- a/views/tmpl/admin/support/technician.html
+++ b/views/tmpl/admin/support/technician.html
@@ -81,7 +81,7 @@
 																		<div ng-controller="DatepickerDemoCtrl">
 																			<label for="">Expiration Date <span class="text-danger">*</span></label>
 																			<div class="input-group userexp">
-																				<input type="text" class="form-control" uib-datepicker-popup="dd/MM/yyyy" datepicker-localdate ng-model="$parent.addTechnician.expirationdate" min-date="mindate" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" onkeypress="return false;" />
+																				<input type="text" class="form-control" uib-datepicker-popup="dd/MM/yyyy"  ng-model="$parent.addTechnician.expirationdate" min-date="mindate" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" onkeypress="return false;" />
 																				<span class="input-group-btn">
 																					<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
 																				</span>
