before pagination activity

--- a/views/tmpl/admin/activity.html
+++ b/views/tmpl/admin/activity.html
@@ -55,7 +55,7 @@
 											<label for="">Date/Time</label>
 											<div class="input-group">
 
-												<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="$parent.time" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" onkeypress="return false;" />
+												<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="$parent.time" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" onkeypress="return false;" ng-change="eventFetch()" />
 
 												<span class="input-group-btn">
 													<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar" ></i></button>
