--- a/views/tmpl/admin/support/technician.html
+++ b/views/tmpl/admin/support/technician.html
@@ -55,8 +55,8 @@
 																		<input type="email" name="email" id="" class="form-control" placeholder=""  ng-model="addTechnician.email" required="required">
 																	</div>
 																	<div class="col-sm-6 col-md-6">																		
-																		<label for="">Phone Number <span class="text-danger">*</span><small>(+19876543210)</small> </label>
-																		<input type="text" name="" id="" class="form-control" placeholder="" ng-model="addTechnician.phone_number" maxlength="15" required="required" style="">
+																		<label for="">Phone Number <span class="text-danger">*</span></label>
+																		<input type="text" name="" id="" class="form-control" placeholder="" ng-model="addTechnician.phone_number" ui-mask="(999) 999-9999" required="required" style="">
 																	</div>
 																</div>
 																<div class="form-group row">																	
