--- a/elika-warehouse/views/tmpl/inventory/devices.html
+++ b/elika-warehouse/views/tmpl/inventory/devices.html
@@ -71,7 +71,7 @@
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Account Number/ICCID <span class="text-danger">*</span></label>
-														<input type="text" name="account_no" id="" ng-model="device.account_no" class="form-control" number ui-mask="{{'99999 99999 99999 99999'}}" placeholder="" required>
+														<input type="text" name="account_no" id="" ng-model="device.account_no" class="form-control" number ui-mask="{{'99999 99999 99999 99999'}}" ui-mask-placeholder-char="space" placeholder="" required>
 													</div>
 												</div>
 												<div class="row">
@@ -87,7 +87,7 @@
 												<div class="row">
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Phone Number  <span class="text-danger">*</span></label>
-														<input type="text" name="phone" id="" class="form-control" ng-model="device.phone_no" ui-mask="{{'(999) 999-9999'}}"  required>
+														<input type="text" name="phone" id="" class="form-control" ng-model="device.phone_no" ui-mask="{{'999 999 9999'}}" ui-mask-placeholder-char="space" required>
 													</div>
 													<div class="form-group col-sm-6 col-md-6">
 														<label for="">Bluetooth Mac Id <span class="text-danger">*</span></label>
